--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -9,6 +9,22 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+    flex-wrap: wrap;
+
+    @media screen and (max-width: 1199px) {
+            text-align: center;
+        }
+    
+        @media screen and (min-width: 768px) {
+            display: flex;
+            flex-wrap: wrap;
+            align-items: baseline;
+        }
+    
+        @media screen and (min-width: 1200px) {
+            display: flex;
+            align-items: baseline;
+        }
 }
 
 &-logo-style {
@@ -53,6 +69,8 @@
     letter-spacing: 0.03em;
     color: var(--color-very-light-grey);
     line-height: 1.71;
+
+    
 }
 
 &__mail {
@@ -73,6 +91,8 @@
     letter-spacing: 0.02em;
     color: var(--color-grey);
     text-decoration: none;
+
+    
 }
 
 /*====== FOOTER SOCIALS =========  */
