--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -1,9 +1,22 @@
 .mobile-menu {
-position:absolute;
+position: absolute;
 top: 0;
 left: 0;
-width: 100vp;
+width: 100vw;
 height: 100vh;
 background-color: red;
 z-index: 2;
+}
+.menu-toggle {
+
+    display: flex ;
+    cursor: pointer;
+    padding: 0;
+    border: none;
+    background-color: inherit;
+    margin: 0;
+    @media screen and (min-width: 768px) {
+        display: none;
+        
+    }
 }
