--- a/sass/components/_what-we-do.scss
+++ b/sass/components/_what-we-do.scss
@@ -1,3 +1,11 @@
+.what-we-do-container {
+    display: none;
+
+    @media screen and (min-width: 1200px) {
+        display: block;
+    }
+}
+
 .what-we-do__header {
     display: flex;
     justify-content: center;
