--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -5,11 +5,27 @@
     padding-bottom: 60px;
     background-color: var(--color-grey2);
 
+&__wrapper {
+    flex-direction: column;
+
+    @media screen and (min-width: 1200px) {
+        flex-direction: row;
+        
+        
+    }
+    @media screen and (min-width: 768px) {
+        flex-direction: row;
+        justify-content: center;
+    }
+}
+
+
 &-container {
     display: flex;
     flex-direction: column;
     gap: 20px;
-    flex-wrap: wrap;
+    margin-bottom: 60px;
+ 
 
     @media screen and (max-width: 1199px) {
             text-align: center;
@@ -19,6 +35,7 @@
             display: flex;
             flex-wrap: wrap;
             align-items: baseline;
+            // margin-right: 200px;
         }
     
         @media screen and (min-width: 1200px) {
@@ -36,6 +53,7 @@
     letter-spacing: 0.03em;
     color: var(--hover-color);
     text-decoration: none;
+    justify-content: center;
 }
 
 &__logo {
@@ -47,6 +65,7 @@
     line-height: 1.19;
     letter-spacing: 0.03em;
     color: var(--hover-color);
+    
 }
 
 &__logo--white {
@@ -69,6 +88,7 @@
     letter-spacing: 0.03em;
     color: var(--color-very-light-grey);
     line-height: 1.71;
+    justify-content: center;
 
     
 }
@@ -100,8 +120,18 @@
 &__join-us {
     display: flex;
     flex-direction: column;
-    margin-left: 70px;
+   text-align: center;
     margin-top: 14px;
+    justify-content: center;
+    margin-bottom: 60px;
+
+    @media screen and (min-width: 1200px) {
+        margin-left: 70px;
+        display: block;
+    }
+    @media screen and (min-width: 768px) {
+        
+    }
 }
 
 
@@ -110,7 +140,12 @@
     text-transform: uppercase;
     font-weight: 700;
     margin-bottom: 20px;
-}
+
+    @media screen and (min-width: 1200px) {
+            // margin-left: 70px;
+            text-align: start;
+   
+}}
 
 &__icons {
     display: flex;
@@ -142,9 +177,14 @@
 &-newsletter {
     display: flex;
     flex-direction: column;
-    margin-left: 78px;
+    // margin-left: 78px;
     margin-top: 14px;
-}
+text-align: center;
+
+@media screen and (min-width: 1200px) {
+        margin-left: 78px;
+}}
+
 
 &__newsletter-text {
     margin-bottom: 20px;
@@ -155,11 +195,21 @@
     text-transform: uppercase;
     display: flex;
     align-items: center;
-}
+    text-align: center;
+    justify-content: center;
+
+    @media screen and (min-width: 1200px) {
+            // margin-left: 70px;
+            justify-content: flex-start;
+}}
 
 &__newsletter-form {
     display: flex;
-}
+    flex-direction: column;
+
+    @media screen and (min-width: 1200px) {
+        flex-direction: row;   
+}}
 
 &__input {
     padding-left: 16px;
@@ -170,6 +220,7 @@
     border: 1px solid rgba(255, 255, 255, 0.3);
     border-radius: 4px;
     color: var(--greyrgba);
+    margin-bottom: 20px;
 }
 
 &__input::placeholder {
@@ -180,9 +231,11 @@
 }
 
 &__newsletter-button {
-    margin-left: 12px;
+    margin-inline: auto;
     padding: 10px 28px 10px 42px;
     display: flex;
+   width: 200px;
+   height: 50px;
     align-items: center;
     justify-content: center;
     font-size: 16px;
@@ -196,7 +249,13 @@
     cursor: pointer;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     gap: 24px;
-}
+    
+@media screen and (min-width: 1200px) {
+        margin-left: 12px;
+  
+
+
+}}
 
 &__newsletter-icon {
     fill: var(--color-white);
