--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -8,15 +8,21 @@
 &__wrapper {
     flex-direction: column;
 
-    @media screen and (min-width: 1200px) {
-        flex-direction: row;
-        
-        
-    }
     @media screen and (min-width: 768px) {
         flex-direction: row;
         justify-content: center;
+        flex-wrap: wrap;
+            flex-basis: calc((100% - 30px) / 2);
+       
     }
+    
+    @media screen and (min-width: 1200px) {
+        flex-direction: row;
+      flex-wrap: nowrap;
+        
+        
+    }
+    
 }
 
 
@@ -34,13 +40,14 @@
         @media screen and (min-width: 768px) {
             display: flex;
             flex-wrap: wrap;
-            align-items: baseline;
+            align-items: center;
             // margin-right: 200px;
+            
         }
     
         @media screen and (min-width: 1200px) {
             display: flex;
-            align-items: baseline;
+            align-items: center;
         }
 }
 
@@ -54,6 +61,12 @@
     color: var(--hover-color);
     text-decoration: none;
     justify-content: center;
+
+    @media screen and (max-width: 768px) {
+            // margin-left: 70px;
+            // display: block;
+            // justify-content: center;
+        }
 }
 
 &__logo {
@@ -65,6 +78,8 @@
     line-height: 1.19;
     letter-spacing: 0.03em;
     color: var(--hover-color);
+
+    
     
 }
 
@@ -125,14 +140,16 @@
     justify-content: center;
     margin-bottom: 60px;
 
-    @media screen and (min-width: 1200px) {
-        margin-left: 70px;
-        display: block;
-    }
+   
     @media screen and (min-width: 768px) {
         flex-wrap: wrap;
         flex-basis: calc((100% - 30px) / 2);
+        margin-top: 0px;
     }
+         @media screen and (min-width: 1200px) {
+             margin-left: 70px;
+             display: block;
+         }
 }
 
 
@@ -143,7 +160,7 @@
     margin-bottom: 20px;
 
     @media screen and (min-width: 1200px) {
-            // margin-left: 70px;
+            margin-left: 70px;
             text-align: start;
    
 }}
@@ -153,6 +170,7 @@
     justify-content: center;
     align-items: center;
     gap: 10px;
+    
 }
 
 &__icon {
