--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -48,6 +48,9 @@
         @media screen and (min-width: 1200px) {
             display: flex;
             align-items: center;
+            flex-wrap: wrap;
+            margin-bottom: 0;
+            
         }
 }
 
@@ -92,7 +95,19 @@
     display: flex;
     flex-direction: column;
     gap: 9px;
-}
+
+    @media screen and (min-width: 768px) {
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+            // margin-right: 200px;
+    
+        }
+                @media screen and (min-width: 1200px) {
+                    display: flex;
+                    flex-wrap: wrap;
+                  align-items: flex-start;
+}}
 
 &__address {
     display: flex;
@@ -105,8 +120,21 @@
     line-height: 1.71;
     justify-content: center;
 
+    @media screen and (min-width: 768px) {
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+            // margin-right: 200px;
     
-}
+        }
+
+                  @media screen and (min-width: 1200px) {
+                    //   display: flex;
+                    //   flex-wrap: wrap;
+                    //   align-items:flex-start;
+
+    
+}}
 
 &__mail {
     font-style: normal;
@@ -116,6 +144,20 @@
     letter-spacing: 0.02em;
     color: var(--color-grey);
     text-decoration: none;
+
+    @media screen and (min-width: 768px) {
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+            // margin-right: 200px;
+    
+        }
+    
+        @media screen and (min-width: 1200px) {
+            display: flex;
+                flex-wrap: wrap;
+                align-items:flex-start;
+        }
 }
 
 &__tel {
@@ -127,6 +169,18 @@
     color: var(--color-grey);
     text-decoration: none;
 
+    @media screen and (min-width: 768px) {
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+            // margin-right: 200px;
+    
+        }
+@media screen and (min-width: 1200px) {
+    display: flex;
+        flex-wrap: wrap;
+        align-items:flex-start;
+}
     
 }
 
@@ -145,10 +199,13 @@
         flex-wrap: wrap;
         flex-basis: calc((100% - 30px) / 2);
         margin-top: 0px;
+        justify-content: flex-start;
     }
          @media screen and (min-width: 1200px) {
              margin-left: 70px;
              display: block;
+             margin-bottom: 0;
+             margin-top: 14px;
          }
 }
 
