--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -32,6 +32,15 @@
     line-height: 1.19;
     letter-spacing: 0.03em;
     color: var(--hover-color);
+
+    @media screen and (max-width: 768px) {
+            display: flex;
+            // flex-direction: column;
+            gap: 10px;
+            margin: 0;
+            flex-wrap: nowrap;
+            justify-content: flex-start;
+        }
 }
 
 
@@ -79,7 +88,8 @@
         display: flex;
         flex-direction: column;
         gap: 10px;
-        margin: auto;
+        margin: 0;
+        flex-wrap: wrap;
     }
     @media screen and (min-width: 1200px) {
         display: flex;
@@ -99,14 +109,32 @@
     color: var(--color-grey);
     text-decoration: none;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     transition: color var(--transition-duration) var(--cubic-bezier), fill var(--transition-duration) var(--cubic-bezier);
     will-change: color, fill;
+
+    @media screen and (min-width: 768px) {
+            display: flex;
+            // flex-direction: column;
+            // gap: 10px;
+            margin: 0;
+            flex-wrap: nowrap;
+        }
+
+    
 }
 
 &__icon {
     margin-right: 10px;
+
+    @media screen and (min-width: 768px) {
+            display: flex;
+            // flex-direction: column;
+            gap: 10px;
+            // margin: 0;
+            flex-wrap: nowrap;
+        }
 }
 
 &__icon:hover,
