--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -1,22 +1,63 @@
-.mobile-menu {
-position: absolute;
-top: 0;
-left: 0;
-width: 100vw;
-height: 100vh;
-background-color: red;
-z-index: 2;
-}
-.menu-toggle {
 
-    display: flex ;
-    cursor: pointer;
-    padding: 0;
-    border: none;
-    background-color: inherit;
+
+.mobile-menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: white;
+    z-index: 2;
+    padding: 48px 40px;
+}
+
+.mobile-menu__navigation {
+    margin-bottom: auto;
+}
+
+.mobile-menu__list {
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+    margin-bottom: auto;
+}
+
+.mobile-menu__contacts {
+    position: absolute;
+    bottom: 70px;
+    margin-block: 40px;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+
+.mobile-menu__social {
+    position: absolute;
+    bottom: 48px;
+    display: flex;
+    padding-left: 0;
     margin: 0;
-    @media screen and (min-width: 768px) {
-        display: none;
-        
+    gap: 10px;
+}
+
+.mobile-menu__social-item {
+    color: var(--blue-color);
+    padding-right: 10px;
+    border-right: 1px solid rgba(33 33 33 / 0.2);
+
+    &:last-child {
+        border: none;
     }
+}
+
+.toggle-menu {
+    position: absolute;
+    top: 21px;
+    right: 21px;
+    display: flex;
+    align-items: center;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    cursor: pointer;
 }
