--- a/sass/components/_our-clients.scss
+++ b/sass/components/_our-clients.scss
@@ -6,20 +6,39 @@
     justify-content: center;
     font-style: normal;
     font-weight: 700;
-    font-size: 36px;
+    font-size: 28px;
     line-height: 1.16;
     text-align: center;
     letter-spacing: 0.03em;
     color: var(--color-black);
-    margin-bottom: 50px;
+    margin-bottom: 30px;
+
+    @media screen and (min-width: 1200px) {
+        font-size: 36px;
+        margin-bottom: 50px;
+    }
+
+   
 }
 
 .our-clients {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     flex-wrap: wrap;
     gap: 30px;
     border-radius: 4px;
+
+    @media screen and (min-width: 768px) {
+
+        justify-content: center;
+        
+    }
+
+        @media screen and (min-width: 1200px) {
+    
+            justify-content: space-between;
+            
+        }
 
 
 &__icon-client {
