--- a/sass/utils/_globalstyles.scss
+++ b/sass/utils/_globalstyles.scss
@@ -28,11 +28,11 @@ p {
 }
 
 .container {
-    // width: 1200px;
+    width: 480px;
     margin: 0 auto;
     padding: 0 15px;
 
-    @media screen and (min-width: 480px){
+    @media screen and (max-width: 480px){
         width: 480px;
     }
          @media screen and (min-width: 768px) {
