--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -41,6 +41,11 @@
             flex-wrap: nowrap;
             justify-content: flex-start;
         }
+                 @media screen and (max-width: 1200px) {
+                     
+                     margin-left: 0;
+                     
+                 }
 }
 
 
@@ -95,7 +100,8 @@
         display: flex;
             flex-direction: row;
             gap: 30px;
-            margin: auto;
+            margin-left: auto;
+            
     }
 
 }
@@ -157,14 +163,16 @@
 
 
 .nav-highlight::after {
+    left: 0;
+    bottom: -32px;
     position: absolute;
     content: "";
     width: 100%;
     height: 4px;
-    background: var(--hover-color);
     border-radius: 2px;
-    left: 0;
-    bottom: -33px;
+    background: var(--blue-color);
+
+    
 }}
 
 .logo__studio {
