--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -54,6 +54,7 @@
     position: absolute;
     top: 21px;
     right: 21px;
+    margin-right: 30px;
     display: flex;
     align-items: center;
     width: 30px;
